--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Food Website</title>
+  <title>Food Recipes</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Food ingredients Fetching using images</h1>
-    <p>Hey! Welcome to my webpage where you will get foods based on the category of meals. You can check the dishes and fetch the ingredients of a dish if you want to try something new.</p>
+    <h1>Discover New Recipes with Images</h1>
+    <p>Welcome to our website dedicated to exploring delicious recipes! Here, you can discover a wide variety of dishes categorized by meal types.</p>
     <input type="text" id="search" placeholder="Search for a category">
   </header>
   <main>
     <section id="random-meal">
-      <h2>Random Meal</h2>
+      <h2>Random Meals</h2>
       <div id="meal-container">
         <img src="" alt="Random-Meal-Image">
         <p id="meal-name"></p>
       </div>
     </section>
     <section id="searched-meals" style="display: none;">
-      <h2>Search Results</h2>
+      <h2>Search</h2>
       <div id="searched-meals-container"></div>
     </section>
   </main>
